Finished feature to provide call log info for a contact when the contact is selected.  Problem: Lookup of the name for the selected contact is broken.  The sting is currently hard coded.

--- a/res/layout/contact_list_item.xml
+++ b/res/layout/contact_list_item.xml
@@ -33,8 +33,8 @@
          consistency. This is secondary text and not always visible so by default is has its
          visibility set to gone -->
     <TextView android:id="@android:id/text2"
-              android:paddingLeft="@dimen/listview_item_padding"
-              android:paddingRight="@dimen/listview_item_padding"
+              android:paddingLeft="16dp"
+              android:paddingRight="16dp"
               android:layout_width="match_parent"
               android:layout_height="26dp"
               android:layout_toRightOf="@android:id/icon"
