--- a/res/layout/contact_detail_fragment.xml
+++ b/res/layout/contact_detail_fragment.xml
@@ -20,64 +20,90 @@
 -->
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="100">
-
-        <ImageView
-                android:id="@+id/contact_image"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="@integer/contact_detail_photo_percent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_contact_picture_180_holo_light"
-                android:contentDescription="@string/imageview_description"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="100">
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="@integer/contact_detail_info_percent"
-                android:orientation="vertical"
-            android:weightSum="1">
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
 
-            <TextView android:id="@+id/contact_name"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:paddingLeft="@dimen/padding"
-                      android:paddingRight="@dimen/padding"
-                      android:paddingTop="@dimen/padding"
-                      android:visibility="gone"
-                      style="@style/contactNameTitle"/>
+            <ImageView
+                android:id="@+id/contact_image"
+                android:layout_width="265dp"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_contact_picture_180_holo_light"
+                android:contentDescription="@string/imageview_description"
+                />
 
             <LinearLayout
-                android:id="@+id/chart"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Call Log"
+                    android:id="@+id/buttonCallLog" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="SMS Log"
+                    android:id="@+id/buttonSMSLog" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Invisible Log"
+                    android:id="@+id/buttonEmailLog" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView android:id="@+id/contact_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/padding"
+            android:paddingRight="@dimen/padding"
+            android:paddingTop="@dimen/padding"
+            android:visibility="gone"
+            style="@style/contactNameTitle"
+            android:layout_weight="0.05" />
+
+        <LinearLayout
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/padding"
+            android:orientation="vertical">
+
+        </LinearLayout>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/contact_details_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/padding"
                 android:orientation="vertical">
 
+
             </LinearLayout>
 
-            <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+        </ScrollView>
 
-                <LinearLayout
-                        android:id="@+id/contact_details_layout"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="@dimen/padding"
-                        android:orientation="vertical">
-                </LinearLayout>
 
-            </ScrollView>
-
-        </LinearLayout>
 
     </LinearLayout>
 
@@ -85,12 +111,15 @@
          layout mode and no contact is currently selected and therefore the this fragment will
          simply show a text message instead of contact details. -->
     <TextView android:id="@id/android:empty"
-              android:gravity="center"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:text="@string/no_contact_selected"
-              android:fontFamily="sans-serif-light"
-              android:visibility="gone"
-              android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/no_contact_selected"
+        android:fontFamily="sans-serif-light"
+        android:visibility="gone"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </FrameLayout>
+
+
+
