--- a/res/layout/contact_detail_fragment.xml
+++ b/res/layout/contact_detail_fragment.xml
@@ -52,7 +52,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Call Log"
-                    android:id="@+id/buttonCallLog" />
+                    android:id="@+id/buttonCallLog"
+                     />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -63,7 +64,7 @@
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Invisible Log"
+                    android:text="Email Log"
                     android:id="@+id/buttonEmailLog" />
             </LinearLayout>
 
