--- a/res/layout/contact_detail_fragment.xml
+++ b/res/layout/contact_detail_fragment.xml
@@ -80,14 +80,79 @@
             style="@style/contactNameTitle"
             android:layout_weight="0.05" />
 
+
         <LinearLayout
-            android:id="@+id/chart"
-            android:layout_width="match_parent"
+            android:id="@+id/options"
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/padding"
-            android:orientation="vertical">
+            android:longClickable="true">
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical">
+
+                <Spinner
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:id="@+id/date_range_spinner"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+
+                <ToggleButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:text="Score"
+                    android:id="@+id/toggleButtonViewScore"
+                    android:enabled="true"
+                    android:checked="true"
+                    android:clickable="true"
+                    android:visibility="visible"
+                    android:layout_alignParentTop="true"
+                    android:layout_toLeftOf="@+id/toggleButtonViewSMSLog" />
+
+                <ToggleButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:text="Phone"
+                    android:id="@+id/toggleButtonViewCallLog"
+                    android:layout_marginRight="32dp"
+                    android:checked="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true" />
+
+                <ToggleButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:text="SMS"
+                    android:id="@+id/toggleButtonViewSMSLog"
+                    android:checked="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_toLeftOf="@+id/toggleButtonViewCallLog" />
+
+            </RelativeLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/chart"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
 
         </LinearLayout>
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -96,7 +161,7 @@
                 android:id="@+id/contact_details_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/padding"
+                android:paddingBottom="5dp"
                 android:orientation="vertical">
 
 
