--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -20,5 +20,7 @@
          resource files or even code and it only needs to be updated in one place if we wanted
          to change it. -->
     <color name="holo_blue">#FF33B5E5</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#CCCC00</color>
 
 </resources>
