--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -52,6 +52,12 @@
     </style>
 
 
+    <style name="callDuration" parent="@android:style/TextAppearance.Small">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textIsSelectable">true</item>
+        <item name="android:alpha">10</item>
+    </style>
+
     <style name="addressDetail" parent="@android:style/TextAppearance.Medium">
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textIsSelectable">true</item>
