--- a/res/layout/contact_list_item.xml
+++ b/res/layout/contact_list_item.xml
@@ -59,12 +59,24 @@
               android:layout_above="@android:id/text2"
               android:layout_toRightOf="@android:id/icon"
               android:gravity="center_vertical"
-              android:layout_alignParentRight="true"
-              android:layout_alignParentTop="true"
-              android:layout_alignWithParentIfMissing="true"
+        android:layout_alignWithParentIfMissing="true"
               android:fontFamily="sans-serif-light"
               android:singleLine="true"
               android:ellipsize="marquee"
-              android:textAppearance="?android:attr/textAppearanceLarge"/>
+              android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_below="@android:id/text2"
+        android:layout_toLeftOf="@+id/fraction" />
+
+    <com.example.android.contactslist.ui.FractionView
+        android:layout_width="65dp"
+        android:layout_height="50dp"
+        android:id="@+id/fraction"
+        android:paddingBottom="5dp"
+        android:orientation="vertical"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true" />
+
 
 </RelativeLayout>
