--- a/res/layout/contact_detail_fragment.xml
+++ b/res/layout/contact_detail_fragment.xml
@@ -37,7 +37,7 @@
             <ImageView
                 android:id="@+id/contact_image"
                 android:layout_width="265dp"
-                android:layout_height="match_parent"
+                android:layout_height="fill_parent"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_contact_picture_180_holo_light"
                 android:contentDescription="@string/imageview_description"
@@ -45,27 +45,21 @@
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="1">
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Call Log"
-                    android:id="@+id/buttonCallLog"
-                     />
+                <com.example.android.contactslist.ui.FractionView
+                    android:layout_width="match_parent"
+                    android:layout_height="151dp"
+                    android:id="@+id/fraction"
+                    android:paddingBottom="5dp"
+                    android:orientation="vertical"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentTop="true" />
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="SMS Log"
-                    android:id="@+id/buttonSMSLog" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Email Log"
-                    android:id="@+id/buttonEmailLog" />
             </LinearLayout>
 
         </LinearLayout>
@@ -81,94 +75,117 @@
             android:layout_weight="0.05" />
 
 
-        <LinearLayout
-            android:id="@+id/options"
-            android:orientation="horizontal"
+        <TabHost
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:longClickable="true">
+            android:layout_height="fill_parent"
+            android:id="@+id/tabHost">
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical">
-
-                <Spinner
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:id="@+id/date_range_spinner"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
-
-                <ToggleButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:text="Score"
-                    android:id="@+id/toggleButtonViewScore"
-                    android:enabled="true"
-                    android:checked="true"
-                    android:clickable="true"
-                    android:visibility="visible"
-                    android:layout_alignParentTop="true"
-                    android:layout_toLeftOf="@+id/toggleButtonViewSMSLog" />
-
-                <ToggleButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:text="Phone"
-                    android:id="@+id/toggleButtonViewCallLog"
-                    android:layout_marginRight="32dp"
-                    android:checked="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
-
-                <ToggleButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:text="SMS"
-                    android:id="@+id/toggleButtonViewSMSLog"
-                    android:checked="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_toLeftOf="@+id/toggleButtonViewCallLog" />
-
-            </RelativeLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:id="@+id/chart"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
+                android:layout_height="fill_parent"
                 android:orientation="vertical">
 
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="fill_parent"
+                    android:layout_height="22dp"></TabWidget>
+
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                    <!--
+                    <include layout="@layout/tab1" />
+
+                    <include layout="@layout/tab2" />
+                    -->
+
+                    <LinearLayout
+                        android:id="@+id/tab_chart"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent">
+
+                        <LinearLayout
+                            android:id="@+id/chart"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:paddingBottom="5dp"
+                            android:orientation="vertical">
+
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/tab_call"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent">
+
+                        <ScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/contact_call_details_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingBottom="5dp"
+                                android:orientation="vertical">
+
+
+                            </LinearLayout>
+
+                        </ScrollView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/tab_sms"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent">
+
+                        <ScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/contact_sms_details_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingBottom="5dp"
+                                android:orientation="vertical">
+
+
+                            </LinearLayout>
+
+                        </ScrollView>
+
+                        </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/tab_addy"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent">
+
+                        <ScrollView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/contact_details_layout"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingBottom="5dp"
+                                android:orientation="vertical">
+
+
+                            </LinearLayout>
+
+                        </ScrollView>
+                    </LinearLayout>
+
+                </FrameLayout>
             </LinearLayout>
-
-
-        </LinearLayout>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:id="@+id/contact_details_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="5dp"
-                android:orientation="vertical">
-
-
-            </LinearLayout>
-
-        </ScrollView>
-
+        </TabHost>
 
 
     </LinearLayout>
@@ -176,6 +193,7 @@
     <!-- This view will be displayed when the views above are hidden. That happens when in two-pane
          layout mode and no contact is currently selected and therefore the this fragment will
          simply show a text message instead of contact details. -->
+
     <TextView android:id="@id/android:empty"
         android:gravity="center"
         android:layout_width="match_parent"
