--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,8 +19,24 @@
      displays a list of contacts. Tapping on a contact will start a new activity to display the
      contact details. -->
 
+<android.support.v4.widget.DrawerLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/drawer_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent">
+<!-- The main content view -->
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-          android:name="com.example.android.contactslist.ui.ContactsListFragment"
-          android:id="@+id/contact_list"
-          android:layout_height="match_parent"
-          android:layout_width="match_parent"/>
+        android:name="com.example.android.contactslist.ui.ContactsListFragment"
+        android:id="@+id/contact_list"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"/>
+<!-- The navigation drawer -->
+<ListView android:id="@+id/left_drawer"
+    android:layout_width="240dp"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    android:choiceMode="singleChoice"
+    android:divider="@android:color/transparent"
+    android:dividerHeight="0dp"
+    android:background="#111"/>
+</android.support.v4.widget.DrawerLayout>
