Implemented date range selection for chart.  And made some fixes for the fractionView.

--- a/res/layout/chart_fragment.xml
+++ b/res/layout/chart_fragment.xml
@@ -42,6 +42,14 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Auto Scale"
+            android:id="@+id/autoScale"
+            android:layout_alignBottom="@+id/imageButton_next_chart_time"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
 </LinearLayout>
