--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -8,6 +8,22 @@
         android:defaultValue="false" />
 
     <CheckBoxPreference
+        android:key="update_db_checkbox_preference_key"
+        android:title="@string/update_db_preference_title"
+        android:summary="@string/update_db_preference_summary"
+        android:defaultValue="true" />
+
+    <CheckBoxPreference
+        android:dependency="update_db_checkbox_preference_key"
+
+        android:key="sync_with_local_sources_checkbox_preference_key"
+        android:title="@string/sync_with_local_sources_preference_title"
+        android:summary="@string/sync_with_local_sources_preference_summary"
+        android:defaultValue="true" />
+
+    <CheckBoxPreference
+        android:dependency="update_db_checkbox_preference_key"
+
         android:key="sync_with_internet_sources_checkbox_preference_key"
         android:title="@string/sync_with_web_sources_preference_title"
         android:summary="@string/sync_with_web_sources_preference_summary"
