--- a/res/values/integers.xml
+++ b/res/values/integers.xml
@@ -21,4 +21,7 @@
     <integer name="contact_detail_photo_percent">45</integer>
     <integer name="contact_detail_info_percent">55</integer>
 
+    <integer name="conversion_text_over_voice">10</integer>
+
+
 </resources>
