Made the default group picker automatically update with the list of available groups. Begun crafting the EventEntryFragment for arbitrary event recording.

--- a/res/values/array.xml
+++ b/res/values/array.xml
@@ -3,6 +3,7 @@
     <integer-array name="contact_group_data_int">
         <item>0</item>
         <item>1</item>
+        <item>2</item>
     </integer-array>
 
     <integer-array name="alert_vibrate_pattern_int"> <!--milliSecs-->
